--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,7 @@ django-health-check==3.18.3
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 drf-yasg==1.21.7
+gunicorn==23.0.0
 inflection==0.5.1
 packaging==24.1
 psycopg2-binary==2.9.10
